--- a/style.css
+++ b/style.css
@@ -1,1 +1,21 @@
-
+body {background-color: #aee6f7fd; text-align: justify;font-size: 18px;}
+h1 {text-align: center;background-color: #b3b17f ;color: #173138; }
+h3 {text-align: justify;color:  #17313B; }
+b {color: rgb(15, 31, 36); font-size: 18px; }
+i {color: rgb(207, 230, 204); font-size: 18px; }
+header, footer{ background-color: #252f33; color: #ceeffc; text-align: center; font-size: 20px; }
+main {background-color: #dbf7d6;}
+.primeiroparagrafo{
+    text-align: justify;
+    font-size: 18px;
+    border: 2px solid black;
+     padding: 10px;
+     margin: 10px 40px 80px 15px;}
+.segundoparagrafo{
+    text-align: justify;
+    font-size: 18px;
+    border: 2px solid black; 
+    padding: 10px;
+    margin: 10px 40px 80px 15px;}
+#MLC'sto {width:5%; height:5%}
+#lista {display: inline-block;}
