--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ main {background-color: #dbf7d6;}
     border: 2px solid black; 
     padding: 10px;
     margin: 10px 40px 80px 15px;}
-#MLC'sto {width:5%; height:5%}
+#MLC'sStore0 {width:5%; height:5%}
 #lista {display: inline-block;}
