--- a/style.css
+++ b/style.css
@@ -19,3 +19,4 @@ main {background-color: #dbf7d6;}
     margin: 10px 40px 80px 15px;}
 #MLC {width: 5%; height: 5%}
 #lista {display: inline-block;}
+#lista01 {display:inline-block;}
